[FEAT] 세트→전표 구성품 전개 PR-2 — 전개 엔진(6:4 재배분 + 옵션 선별)
개발책임자 "GAS대로". BundleExpander 를 legacy 종합견적서 explodeSetParts/splitIndoorOutdoorToK
완전 충실 재구현(로직만 있고 호출 0이던 것 → 단가 포함 전개).

## 변경 (product-service)
- BundleExpander.expand(parentModelCode, setQty, ExpandOptions) — 단가 포함 ExpandedLine 반환
  (modelCode/name/quantity/unitPrice/componentKind).
- **싱글세트 6:4/4:6 재배분**: splitIndoorOutdoorToK 이식 — 고정부품(패널/리모컨/자재/발통) 선차감,
  잔액을 실내:실외 6:4(가정)/4:6(비가정) 배분, 다수 항목 기존단가 비례+마지막 잔차, 천원 반올림,
  실외기 천원 정렬, 음수 가드. 가정용 판정=classifySingleSetFixed else-if 순서(발통/360/4way/1way/
  덕트/실링/스탠드/벽걸이 선행 → 가정용). 가정용 벽걸이 실내기→fixed 이동.
- **상업멀티 = 구성품 개별 단가**(재배분 없음).
- **옵션 선별**: 패널 1개 선택(블랙/승강/공청/360형상/기본), 리모컨 교체(유선/컬러유선, allowRemoteChange
  AR-EH05 등), 자재 포함여부, 발통/유연호스I형/운임/절삭 제외. ExpandOptions 파라미터.
- KEEP/SINGLE → 부모 1 라인(세트 단가).

## 검증
- 실 Postgres IT: 가정용 6:4(600k/400k)·비가정 4way 4:6(400k/600k) 재배분 + 패널1개선택(블랙)·자재제외.
  기존 EXPAND/KEEP/SINGLE IT 호환. compile PASS.

비스코프(PR-3): EstimateToSlipConverter 전개 배선 + 직접 전표생성 + SlipLine 필드 + FE 옵션 picker.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>